Transform site into dark-mode software engineering portfolio
- Remove sample blog posts (welcome, getting-started)
- Implement dark mode design system with code/table styling
- Transform homepage into comprehensive portfolio featuring:
  * Career highlights and current work at Capitec
  * Technology skills grid (Java, Kotlin, AWS, etc.)
  * Professional software engineering focus
- Add Adaptive RAG chatbot blog article (34KB)
  * Convert from markdown with tables, code blocks, diagrams
  * Integrate interactive React diagrams with Vite build
  * 4 interactive views: Pipeline, Multilingual, Evolution, Architecture
- Set up React build system (Vite + Tailwind CDN)
- Add .gitignore for node_modules and build artifacts

--- a/index.html
+++ b/index.html
@@ -20,9 +20,76 @@
     </header>
 
     <main>
+        <!-- Hero Section -->
         <section class="hero">
-            <h2>Hello, I'm Tassan</h2>
-            <p>Writing about technology, development, and ideas.</p>
+            <div class="hero-content">
+                <h2>Tonderai Saidi</h2>
+                <p class="hero-subtitle">Backend Engineer | Problem Solver | System Architect in the Making</p>
+                <p class="hero-description">
+                    Passionate about solving complex engineering challenges in distributed systems,
+                    event-driven architectures, and fault-tolerant financial infrastructures.
+                </p>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <section class="about">
+            <h3>About Me</h3>
+            <p>
+                I am a backend engineer with a strong foundation in Java, Kotlin, and distributed systems.
+                My experience spans high-load event-driven architectures, secure NFC payment systems, and
+                fault-tolerant financial infrastructures. I approach debugging like an engineer, not just a coder—
+                focusing on first principles and anticipating system failures before they happen.
+            </p>
+        </section>
+
+        <!-- Career Highlights -->
+        <section class="highlights">
+            <h3>Career Highlights</h3>
+            <ul class="highlight-list">
+                <li>Contributed to South Africa's first Visa & Mastercard-certified NFC POS solution</li>
+                <li>Spearheaded security enhancements leading to full SDK certification by Visa & Mastercard</li>
+                <li>Developed a BLE SDK for mobile payments, expanding payments ecosystem</li>
+                <li>Led a Lotto system overhaul, improving stability and scalability</li>
+                <li>Fixed critical bugs in high-load wagering systems, reducing production issues</li>
+            </ul>
+        </section>
+
+        <!-- Current Work -->
+        <section class="current-work">
+            <h3>Current Work</h3>
+            <div class="work-item">
+                <h4>Intermediate Software Engineer @ Capitec</h4>
+                <p class="work-meta">Aug 2025 - Present · Stellenbosch, South Africa (Hybrid)</p>
+                <ul>
+                    <li>Led design of centralized dashboard for AWS Lambda functions with real-time visibility</li>
+                    <li>Delivered emergency communication platform for call centres during outages</li>
+                    <li>Driving development of in-house incident management system to replace PagerDuty</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Skills -->
+        <section class="skills">
+            <h3>Technologies</h3>
+            <div class="skill-grid">
+                <span class="skill-tag">Java</span>
+                <span class="skill-tag">Kotlin</span>
+                <span class="skill-tag">AWS</span>
+                <span class="skill-tag">DynamoDB</span>
+                <span class="skill-tag">RabbitMQ</span>
+                <span class="skill-tag">PostgreSQL</span>
+                <span class="skill-tag">Kubernetes</span>
+                <span class="skill-tag">Docker</span>
+                <span class="skill-tag">Microservices</span>
+                <span class="skill-tag">Event-Driven Architecture</span>
+            </div>
+        </section>
+
+        <!-- CTA -->
+        <section class="cta-section">
+            <h3>Explore My Work</h3>
+            <p>Read about building systems, solving problems, and engineering insights</p>
             <a href="blog.html" class="cta-button">Read the Blog</a>
         </section>
     </main>
